Chnage in controller

--- a/src/BuyerRegistration.Api/appsettings.QA.json
+++ b/src/BuyerRegistration.Api/appsettings.QA.json
@@ -14,6 +14,6 @@
   "CosmosDBSettings": {
     "Endpoint": "https://dev-sbid-westeurope-coresql.documents.azure.com:443/",
     "ContainerName": "bidderdata",
-    "Database": "qa-bidder-registration"
+    "Database": "qa-buyer-registration"
   }
 }
